--- a/src/components/shared/FormPanel/FormPanel.scss
+++ b/src/components/shared/FormPanel/FormPanel.scss
@@ -1,5 +1,5 @@
 @import 'src/styles/layout/views';
 
 .form-panel {
-  height: 100%;
+  height: fit-content;
 }
